Fix white space issue when raised buttons are focused or hovered over

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -71,6 +71,7 @@
 .mobile-view .mobile-nav > li > a, .list-controls .nav > li > a, .show-topic-admin, .user-navigation > .btn,
 .user-navigation .user-archive .btn {
   background-color: color-chooser($tertiary, #ffffff);
+  background-size: calc(100% + 1px) 100%;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.4);
 }
 .discourse-no-touch .mobile-view .mobile-nav > li > a:hover, .mobile-view .discourse-no-touch .mobile-nav > li > a:hover, .discourse-no-touch .list-controls .nav > li > a:hover, .list-controls .discourse-no-touch .nav > li > a:hover, .discourse-no-touch .show-topic-admin:hover, .discourse-no-touch .user-navigation > .btn:hover,
